# mdllm

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
mdllm/: __main__.py  logseq.py  markdown.py
tests/: test_markdown.py
