[project]
name = "mdllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "graphrag>=1.0.1",
    "langchain>=0.3.13",
    "markdown>=3.7",
    "networkx>=3.4.2",
    "rich>=13.9.4",
    "typer-config>=1.4.2",
    "typer>=0.15.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.391",
    "ruff>=0.8.4",
]
